@@ -1,6 +1,6 @@
 ;;; stabular.el --- AUCTeX style for `stabular.sty' (v2.1)  -*- lexical-binding: t; -*-
 
-;; Copyright (C) 2021 Free Software Foundation, Inc.
+;; Copyright (C) 2021--2024 Free Software Foundation, Inc.
 
 ;; Author: Arash Esbati <arash@gnu.org>
 ;; Maintainer: auctex-devel@gnu.org
@@ -44,17 +44,6 @@
    (LaTeX-add-environments
     '("stabular" LaTeX-env-array)
     '("stabular*" LaTeX-env-tabular*))
-
-   ;; Use the enhanced tabular indentation.  Append to
-   ;; `LaTeX-indent-environment-list' in order not to override custom
-   ;; settings.
-   (make-local-variable 'LaTeX-indent-environment-list)
-   (add-to-list 'LaTeX-indent-environment-list
-                '("stabular" LaTeX-indent-tabular)
-                t)
-   (add-to-list 'LaTeX-indent-environment-list
-                '("stabular*" LaTeX-indent-tabular)
-                t)
 
    ;; Append the environments to `LaTeX-item-list':
    (add-to-list 'LaTeX-item-list
