@@ -40,10 +40,6 @@
  (lambda ()
    ;; Make tabularx the default tabular environment
    (setq LaTeX-default-tabular-environment "tabularx")
-   ;; Use the enhanced tabular indentation.  Append to
-   ;; `LaTeX-indent-environment-list' in order not to override custom settings.
-   (add-to-list (make-local-variable 'LaTeX-indent-environment-list)
-                '("tabularx" LaTeX-indent-tabular) t)
 
    ;; Append tabularx to `LaTeX-item-list' with `LaTeX-item-tabular*'
    (add-to-list 'LaTeX-item-list '("tabularx" . LaTeX-item-tabular*) t)
