@@ -41,13 +41,6 @@
    ;; Make tabulary the default tabular environment
    (setq LaTeX-default-tabular-environment "tabulary")
 
-   ;; Use the enhanced tabular indentation.  Append to
-   ;; `LaTeX-indent-environment-list' in order not to override custom
-   ;; settings.
-   (add-to-list (make-local-variable 'LaTeX-indent-environment-list)
-                '("tabulary" LaTeX-indent-tabular)
-                t)
-
    ;; Append tabulary to `LaTeX-item-list' with `LaTeX-item-tabular*'
    (add-to-list 'LaTeX-item-list '("tabulary" . LaTeX-item-tabular*) t)
 
